# DNN-Adapt

./: CMakeLists.txt  README.md  build.sh  setup.sh
DNN-Adapt/: main.cpp
DNN-Adapt.xcodeproj/: project.pbxproj
DNN-Adapt.xcodeproj/xcuserdata/milind.xcuserdatad/xcschemes/: xcschememanagement.plist
Evaluations/: data_processor.py  generate_gpu_utilization_graphs.py  generate_violation_graphs.py  gpu_analyzer.py  gpu_processor.py  lp.py  visualization.py
Evaluations/Evaluations/: generate_violation_graphs.py  plotGraph.py  visualization.py
Evaluations/Evaluations/Batch8/: cpp-log-base8.txt
Evaluations/Evaluations/Batch8/csv-data-batch8/: model_metrics_live.csv  overall_metrics_live.csv  performance_history.csv  recent_requests_details.csv  request_rate_history.csv  second_requests.csv  second_violations.csv
Evaluations/Evaluations/DNN/: cpp-log-dnn.txt
Evaluations/Evaluations/DNN/csv-data-dnn/: model_metrics_live.csv  overall_metrics_live.csv  performance_history.csv  recent_requests_details.csv  request_rate_history.csv  second_requests.csv  second_violations.csv
Evaluations/Evaluations/Nexus/: cpp-log-nexus.txt
Evaluations/Evaluations/Nexus/csv-data-nexus/: model_metrics_live.csv  overall_metrics_live.csv  performance_history.csv  recent_requests_details.csv  request_rate_history.csv  second_requests.csv  second_violations.csv
Evaluations/Reduced-ActionSpace-(-4,+8)-seq/: best-episode-run.txt
Evaluations/results-ramp-constant/batch8/csv-data-batch8/: model_metrics_live.csv  overall_metrics_live.csv  performance_history.csv  recent_requests_details.csv  request_rate_history.csv  second_requests.csv  second_violations.csv
Evaluations/results-ramp-constant/dnn/csv-data-dnn/: model_metrics_live.csv  overall_metrics_live.csv  performance_history.csv  recent_requests_details.csv  request_rate_history.csv  second_requests.csv  second_violations.csv
Evaluations/results-ramp-constant/nexus/csv-data-nexus/: model_metrics_live.csv  overall_metrics_live.csv  performance_history.csv  recent_requests_details.csv  request_rate_history.csv  second_requests.csv  second_violations.csv
Evaluations/sin_burst/batch8/csv-data-batch8/: model_metrics_live.csv  overall_metrics_live.csv  performance_history.csv  recent_requests_details.csv  request_rate_history.csv  second_requests.csv  second_violations.csv
Evaluations/sin_burst/dnn/csv-data-dnn/: model_metrics_live.csv  overall_metrics_live.csv  performance_history.csv  recent_requests_details.csv  request_rate_history.csv  second_requests.csv  second_violations.csv
Evaluations/sin_burst/nexus/csv-data-nexus/: model_metrics_live.csv  overall_metrics_live.csv  performance_history.csv  recent_requests_details.csv  request_rate_history.csv  second_requests.csv  second_violations.csv
data/images/: generate-image-bin.py
models/: check_models.py  get_models.py  requirements.txt
models/profiles/system/: efficientnetb0.csv  resnet18.csv  vit16.csv
src/: Executor.h  Logger.cpp  Logger.h  NodeRunner.h  Profiler.h  RequestProcessor.cpp  RequestProcessor.h  SchedulerInterface.h  Simulator.cpp  Simulator.h  build_grpc.sh  grpc_scheduler.h  gymnasium_env.py  imageInput.h  main.cpp  nexus.cpp  nexus.h  scheduler.proto
src/agent/: agent_scheduler.py  analyze_Training.py  episode_analyzer.py  evaluation.py  gymnasium_env.py  requirements.txt  training.py
src/agent/logs/: events.out.tfevents.1749281444.elves-lab-gpu-01.2654076.0
src/com/: agent_scheduler.proto
util/: HowtoRun.md  dashboard.py  log_csv_processor.py  slo_config.json
util/csv_data_cache/: model_metrics_live.csv  overall_metrics_live.csv  performance_history.csv  recent_requests_details.csv  request_rate_history.csv
